<resources>

    <!-- File chooser -->

    <string name="activity_name">Dateiauswahl</string>

    <!-- Main -->
    <string name="app_name">Einsatzplan</string>
    <string name="description">Diese App konvertiert einen Einsatzplan in Kalendereinträge.</string>
    <string name="start">1. Kalender lesen.</string>
    <string name="create_entries">2. Termine übernehmen.</string>
    <string name="lines_read">Zeilen gelesen</string>
    <string name="lines_valid">Gültig</string>
    <string name="lines_not_valid">Nicht gültige Zeilen</string>
    <string name="swipe">Wischen zum Ein-/ Ausblenden</string>
    <string name="todays_event">Heute:</string>
    <string name="search_hint">Suche.....</string>

    <!-- Calendar row -->
    <string name="add_to_calendar_text">Kalender Eintrag</string>
    <string name="add_to_email">E- Mail Anfrage</string>
    <string name="time_from_to">bis:</string>
    <string name="time_designation">Uhr</string>

    <string name="so">SO</string>
    <string name="mo">MO</string>
    <string name="di">DI</string>
    <string name="mi">MI</string>
    <string name="don">DO</string>
    <string name="fr">FR</string>
    <string name="sa">SA</string>

    <!-- menu -->
    <string name="load_text">Einsatzplan laden</string>
    <string name="info">Info</string>

    <!-- Fragment date detail view -->
    <string name="date_detail_view_title">Ausgewählt:</string>
    <string name="ok_button">Schließen</string>
    <string name="days_running_text">Tage</string>
    <string name="selected_entrys_details">Ausgewählter Eintrag:</string>
    <string name="this_entry_belongs_to_vag">Lehrgang:</string>
    <string name="course_begins_at">Beginnt am</string>
    <string name="course_ends_at">Endet am</string>

    <!-- Fragment showing todays event -->
    <string name="today_text">Heute:</string>
    <string name="weekend_text">Wochenende :-)</string>
    <string name="todays_date_no_valid_entry">Nicht verplant...</string>

    <!-- Info activity -->
    <string name="app_title">Einsatzplan</string>
    <string name="version_text">Version:</string>

    <string name="version_info_update_available">
     <![CDATA[
        Es ist eine neuere Version dieser App im Google Play Store verfügbar. Einsatzplan Version:
        ]]>
    </string>

    <string name="version_info_ok">
     <![CDATA[
        Ihre App ist auf dem neustem Stand.
        ]]>
    </string>

    <string name="dialog_new_version_available">
        <![CDATA[<p><b>Neue Version verfügbar</b></p>

        <p>Im <i>Google Play Store</i> ist eine überarbeitete Version dieser <i>App</i> verfügbar.</p>

        <p>Wenn Sie möchten, dann können sie von hier aus direkt in den <i>Google Play Store</i> wechseln und das Update durchführen.</p>

        <p>Ihre Einstellung und gespeicherten Daten bleiben erhalten.</p>

        Neue Version:]]>
    </string>




    <!--Ask for device permissions -->
    <!-- @rem:Shows hot to include html- strings into a string resource file@@ -->
    <string name="ask_for_device_permissions_file_system">



        <![CDATA[<p><b>Fehlende Berechtigung</b></p>

    <p>Diese App darf nicht auf ihr internes Dateisystem zugreifen.
        Dabei handelt es sich um die Inhalte des Ordners <i>/SDCard</i>.</p>

        <p>Die App benötigt die Berechtigung damit sie ihre Einsatzpläne lesen kann. Schreibzugriffe wer!den nicht benötigt. Wenn Sie diesen Dialog bestätigen,
        dann werden die Systemeinstellungen geöffnet.</p>

        <p>Wählen Sie dort bitte den
        Punkt <i>Berechtigungen</i> und tippen Sie auf <i>Permissions -> Storage</i>.</p>

        Danach können Sie direkt zur App zurückkeheren indem Sie den <i>Back- Button</i> ihres Gerätes antippen.]]>
    </string>

    <string name="permission_denied">Sie habe die erforderliche Berechtigung verweigert. Wenn Sie das ändern möchten, dann starten Sie die App bitte erneut.</string>

    <string name="PERM_OK_Button">Zulassen</string>
    <string name="PERM_CANCEL_BUTTON">Nein</string>

    <string name="do_update_confirm_button">Update</string>
    <string name="no_udate_button">Nein,danke</string>

    <string name="no_network">
     <![CDATA[
        Kein Netzwerk, die aktuelle Version der App im Play Store, kann nicht ermittelt werden.
        ]]>
    </string>

    <string name="no_version_info_available">
     <![CDATA[
        Die aktuelle Version im Play Store konnte nicht ermittelt werden.
        ]]>
    </string>
</resources>