<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendar_entry_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/date"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_to_calendar"></TextView>

        <TextView
            android:id="@+id/start_time"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="start"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/date"></TextView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/time_from_to"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/start_time"
            app:layout_constraintTop_toBottomOf="@+id/start_time"></TextView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_designation"
            app:layout_constraintStart_toEndOf="@+id/end_time"
            app:layout_constraintTop_toTopOf="@+id/end_time"></TextView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_designation"
            app:layout_constraintStart_toEndOf="@+id/start_time"
            app:layout_constraintTop_toTopOf="@+id/start_time"></TextView>

        <TextView
            android:id="@+id/end_time"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="end"
            app:layout_constraintEnd_toEndOf="@+id/start_time"
            app:layout_constraintStart_toStartOf="@+id/start_time"
            app:layout_constraintTop_toBottomOf="@+id/textView5"></TextView>

        <TextView
            android:id="@+id/vag_number"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="vag_number"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/date"></TextView>

        <TextView
            android:id="@+id/course_number"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="course_number"
            app:layout_constraintStart_toEndOf="@+id/vag_number"
            app:layout_constraintTop_toTopOf="@+id/vag_number"></TextView>

        <TextView
            android:id="@+id/type"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="type"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/location"></TextView>

        <TextView
            android:id="@+id/location"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="locction"
            app:layout_constraintStart_toStartOf="@+id/vag_number"
            app:layout_constraintTop_toTopOf="@+id/start_time"></TextView>

        <TextView
            android:id="@+id/holiday_remark"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="holiday_remark"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toTopOf="@+id/type"></TextView>

        <TextView
            android:id="@+id/original_entry"
            style="@style/TableRowsRemark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="source"
            app:layout_constraintStart_toStartOf="@+id/location"
            app:layout_constraintTop_toBottomOf="@+id/location"></TextView>

        <TextView
            android:id="@+id/add_to_calendar"
            style="@style/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_calendar_text"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent"></TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>