<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    app:layoutDescription="@xml/scene_main_activity_animate_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient_grey"
        android:elevation="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:context=".MainActivity">

        <RadioGroup
            android:id="@+id/radioGroupViewFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alle"></RadioButton>

            <RadioButton
                android:id="@+id/select_valid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gültige"></RadioButton>

            <RadioButton
                android:id="@+id/select_invalid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ungültige"></RadioButton>

        </RadioGroup>


        <CheckBox
            android:id="@+id/show_only_future_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="Nur künftige"
            app:layout_constraintStart_toStartOf="@+id/radioGroupViewFilter"
            app:layout_constraintTop_toBottomOf="@+id/horiz_line_2"></CheckBox>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/horiz_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/show_only_future_events"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="5dp"></androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/vag_number"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toTopOf="@+id/type"></TextView>

        <TextView
            android:id="@+id/course_number"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/vag_number"
            app:layout_constraintTop_toTopOf="@+id/vag_number"></TextView>

        <TextView
            android:id="@+id/type"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/location"></TextView>

        <TextView
            android:id="@+id/location"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/date"
            app:layout_constraintTop_toBottomOf="@+id/date"></TextView>

        <TextView
            android:id="@+id/holiday_remark"
            style="@style/TableRowsTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"></TextView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/horiz_line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupViewFilter"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="5dp">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView2"
            style="@style/ActivityTextBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todays_event"
            app:layout_constraintStart_toStartOf="@+id/show_only_future_events"
            app:layout_constraintTop_toBottomOf="@+id/horiz_line" />

        <TextView
            android:id="@+id/day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/date"></TextView>

        <TextView
            android:id="@+id/date"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/day_of_week"
            app:layout_constraintTop_toBottomOf="@+id/textView2"></TextView>

        <TextView
            android:id="@+id/start_time"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="@+id/date"></TextView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_from_to"
            app:layout_constraintStart_toEndOf="@+id/start_time"
            app:layout_constraintTop_toTopOf="@+id/start_time"></TextView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time_designation"
            app:layout_constraintStart_toEndOf="@+id/end_time"
            app:layout_constraintTop_toTopOf="@+id/end_time"></TextView>

        <TextView
            android:id="@+id/end_time"
            style="@style/TableRowsTitel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/job_schedule_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">
    </androidx.recyclerview.widget.RecyclerView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient_grey"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"></FrameLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>
